update colors, update window to always start in center -TEMP-, add speed variable for dialogue

--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -1,4 +1,6 @@
-$primary-background: rgb(48, 82, 87);
+$primary-background: rgb(255, 255, 255);
+$window-background: rgb(255, 255, 255);
+$window-top-bar-color: rgb(255, 255, 255);
 
 body {
   background: $primary-background;
