--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -1,4 +1,5 @@
 $primary-background: rgb(255, 255, 255);
+$gameplay-background: rgb(233, 233, 233);
 $window-background: rgb(255, 255, 255);
 $window-top-bar-color: rgb(255, 255, 255);
 
