add store layout, component for InventoryGrid & thumbnail & change id:s to itemId and classId

--- a/assets/_sizes.scss
+++ b/assets/_sizes.scss
@@ -3,3 +3,6 @@ $side-spacing: 10px;
 
 $border-radius-size: 5px;
 $border: 1px solid black;
+
+$inventory-cell-size: 80px;
+$inventory-cell-gap: 2px;
