--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -2,6 +2,7 @@ $primary-background: rgb(255, 255, 255);
 $gameplay-background: rgb(233, 233, 233);
 $window-background: rgb(255, 255, 255);
 $window-top-bar-color: rgb(255, 255, 255);
+$item-cell-background: rgba(0, 0, 0, 0.2);
 
 body {
   background: $primary-background;
@@ -10,4 +11,25 @@ body {
 .image-contrast {
   filter: contrast(150%);
   // filter: grayscale(100%) contrast(400%);
+}
+
+.image-portrait--hover {
+  &:hover {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      aspect-ratio: 1/1;
+
+      background: #ffffff;
+      background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 60%,
+        rgba(252, 173, 70, 1) 100%
+      );
+    }
+  }
 }
